--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,14 @@
             </div>
         </div>
         <div class="panel panel-right panel-cover">
-            <div class="block">
+            <div class="">
                 <p>Right Panel content here</p>
                 <p><a class="panel-close" href="#">Close me</a></p>
-                <p><a class="panel-open" href="#" data-panel="left">Open Left Panel</a></p>
+
+                <div class="page-content">
+                <div class="list list-block virtual-list"></div>
+                </div>
+
             </div>
         </div>
 
@@ -99,6 +103,9 @@
                 <div class="tabs">
                     <!-- Scrollable page content -->
                     <div class="page-content tab hide-navbar-on-scroll" id="tab-home">
+
+                        <!--<div class="list list-block virtual-list media-list"></div>-->
+
                         <div class="block">
                             <p>Page content goes here</p>
                             <p><a class="panel-open" href="#">Open Left Panel</a></p>
@@ -121,36 +128,39 @@
                             <a href="https://github.com/login/oauth/authorize?client_id=592f85e667963bc1a594&state=fyt" class="link external"><i class="f7-icons">social_github_fill</i></a>
 
 
-                            <div class="block-title">GitHub Access</div>
-                            <div class="list no-hairlines-md">
-                                <ul>
-                                    <li class="item-content item-input item-input-with-info" id="f7-input-access-token">
-                                        <div class="item-inner">
-                                            <div class="item-title item-floating-label">Token</div>
-                                            <div class="item-input-wrap">
-                                                <input type="text" id="input-access-token" placeholder="Your access token" required validate pattern="[\d\w]{40}" data-error-message="Length = 40 and Only with numbers and letters please!">
-                                                <span class="input-clear-button"></span>
-                                                <div class="item-input-info">
-                                                    <span>Token with on-scope is recommended.</span>
-                                                    <a class="link popover-open" data-popover=".popover-about" href="https://developer.github.com/apps/building-oauth-apps/scopes-for-oauth-apps/">
-                                                        <i class="icon f7-icons size-14 ios-only">help_fill</i>
-                                                        <i class="icon material-icons size-14 md-only">help</i>
-                                                    </a>
+                            <div id="input-token-form">
+                                <div class="block-title">GitHub Access</div>
+                                <div class="list no-hairlines-md">
+                                    <ul>
+                                        <li class="item-content item-input item-input-with-info" id="f7-input-access-token">
+                                            <div class="item-inner">
+                                                <div class="item-title item-floating-label">Token</div>
+                                                <div class="item-input-wrap">
+                                                    <input type="text" id="input-access-token" placeholder="Your access token" required validate pattern="[\d\w]{40}" data-error-message="Length = 40 and Only with numbers and letters please!">
+                                                    <span class="input-clear-button"></span>
+                                                    <div class="item-input-info">
+                                                        <span>Token with on-scope is recommended.</span>
+                                                        <a class="link popover-open" data-popover=".popover-about" href="https://developer.github.com/apps/building-oauth-apps/scopes-for-oauth-apps/">
+                                                            <i class="icon f7-icons size-14 ios-only">help_fill</i>
+                                                            <i class="icon material-icons size-14 md-only">help</i>
+                                                        </a>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </li>
-                                    <li class="item-content">
-                                        <div class="item-inner">
-                                            <button class="col button button-fill" id="bt-save-token">Save Token</button>
-                                        </div>
-                                    </li>
-                                </ul>
+                                        </li>
+                                        <li class="item-content">
+                                            <div class="item-inner">
+                                                <button class="col button button-fill" id="bt-save-token">Save Token</button>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
-
-                            <div id="personal-profile"></div>
-                            <div id="repos-list"></div>
+                            <div id="user-info">
+                                <div id="personal-profile"></div>
+                                <div id="repos-list"></div>
+                            </div>
 
                         </div>
                     </div>
@@ -189,10 +199,7 @@
                             <!-- search target list -->
                             <div class="search-result" id="search-repos-list">
                             </div>
-                            <!-- Nothing found message -->
-                            <!--<div class="block searchbar-not-found">-->
-                                <!--<div class="block-inner">Nothing found</div>-->
-                            <!--</div>-->
+
                         </div>
                     </div>
                 </div>
